[gd_scene load_steps=5 format=3 uid="uid://cms3r4506n828"]

[ext_resource type="Script" uid="uid://dt0ge805altn7" path="res://scripts/utility/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://dxyhd55iw6s2j" path="res://textures/title.png" id="1_l6cm7"]
[ext_resource type="Theme" uid="uid://dt57x1ox0ea6o" path="res://resources/themes/main_menu.tres" id="2_bqqt6"]
[ext_resource type="Script" uid="uid://bluqpsiuyuckb" path="res://scripts/utility/menu_update_value.gd" id="4_wu84c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Main" type="VBoxContainer" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -50.0
offset_right = 156.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bqqt6")
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main"]
layout_mode = 2
texture = ExtResource("1_l6cm7")

[node name="Button" type="Button" parent="Main"]
layout_mode = 2
text = "Start"

[node name="Button2" type="Button" parent="Main"]
layout_mode = 2
text = "Options"

[node name="Button3" type="Button" parent="Main"]
layout_mode = 2
text = "Exit"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Options" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.239063
anchor_right = 0.760156
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bqqt6")
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
theme_override_colors/font_color = Color(0.480469, 0.480469, 0.480469, 1)
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Volume" type="HBoxContainer" parent="Options"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="Options/Volume"]
layout_mode = 2
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Options/Volume"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="Label2" type="Label" parent="Options/Volume" node_paths=PackedStringArray("master_value")]
layout_mode = 2
script = ExtResource("4_wu84c")
master_value = NodePath("../HSlider")

[node name="VBoxContainer2" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 79

[node name="Music Volume" type="Label" parent="Options/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Options/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SFX Volume" type="HBoxContainer" parent="Options/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 102

[node name="SFX Volume" type="Label" parent="Options/VBoxContainer2/SFX Volume"]
layout_mode = 2
text = "SFX Volume"

[node name="HSlider2" type="HSlider" parent="Options/VBoxContainer2/SFX Volume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Dialogue Volume" type="HBoxContainer" parent="Options/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Dialogue Volume" type="Label" parent="Options/VBoxContainer2/Dialogue Volume"]
layout_mode = 2
text = "Dialogue Volume"

[node name="HSlider3" type="HSlider" parent="Options/VBoxContainer2/Dialogue Volume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Sensitivity" type="HBoxContainer" parent="Options"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="Options/Sensitivity"]
layout_mode = 2
text = "Mouse Sensitivity
"

[node name="HSlider2" type="HSlider" parent="Options/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.1
value = 1.0

[node name="Label3" type="Label" parent="Options/Sensitivity" node_paths=PackedStringArray("master_value")]
layout_mode = 2
script = ExtResource("4_wu84c")
master_value = NodePath("../HSlider2")

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.496094, 0.496094, 0.496094, 1)
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Walk "

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "W A S D"

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 63

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Sprint"

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "LShift"

[node name="HBoxContainer5" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 65

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Jump"

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Space"

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 65

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Shoot"

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "LeftMouse"

[node name="HBoxContainer6" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 53

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Reload"

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "R"

[node name="HBoxContainer7" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 89

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "Use"

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "E"

[node name="HBoxContainer4" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Flashlight"

[node name="Label2" type="Label" parent="Options/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "F"

[node name="PanelContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="Options/PanelContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Main/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/Button3" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Options/Volume/HSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer2/HBoxContainer/HSlider" to="." method="_on_musicvol_slider_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer2/SFX Volume/HSlider2" to="." method="_on_sfxvol_slider_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer2/Dialogue Volume/HSlider3" to="." method="_on_dialogue_slider_value_changed"]
[connection signal="value_changed" from="Options/Sensitivity/HSlider2" to="." method="_on_mouse_sensitivity"]
[connection signal="pressed" from="Options/PanelContainer/Back" to="." method="_on_back_pressed"]
